dockerAssgn/logs/dag_id=database_postgres/run_id=manual__2023-06-14T13:29:25.521137+00:00/task_id=insert_into_table/attempt=1.log
[2023-06-14T13:29:27.346+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: database_postgres.insert_into_table manual__2023-06-14T13:29:25.521137+00:00 [queued]>
[2023-06-14T13:29:27.351+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: database_postgres.insert_into_table manual__2023-06-14T13:29:25.521137+00:00 [queued]>
[2023-06-14T13:29:27.351+0000] {taskinstance.py:1279} INFO - 
--------------------------------------------------------------------------------
[2023-06-14T13:29:27.352+0000] {taskinstance.py:1280} INFO - Starting attempt 1 of 1
[2023-06-14T13:29:27.352+0000] {taskinstance.py:1281} INFO - 
--------------------------------------------------------------------------------
[2023-06-14T13:29:27.360+0000] {taskinstance.py:1300} INFO - Executing <Task(PostgresOperator): insert_into_table> on 2023-06-14 13:29:25.521137+00:00
[2023-06-14T13:29:27.364+0000] {standard_task_runner.py:55} INFO - Started process 361 to run task
[2023-06-14T13:29:27.367+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'database_postgres', 'insert_into_table', 'manual__2023-06-14T13:29:25.521137+00:00', '--job-id', '18', '--raw', '--subdir', 'DAGS_FOLDER/postgress_db.py', '--cfg-path', '/tmp/tmp4xpgvrgi']
[2023-06-14T13:29:27.368+0000] {standard_task_runner.py:83} INFO - Job 18: Subtask insert_into_table
[2023-06-14T13:29:27.415+0000] {task_command.py:388} INFO - Running <TaskInstance: database_postgres.insert_into_table manual__2023-06-14T13:29:25.521137+00:00 [running]> on host 649eec7cdf92
[2023-06-14T13:29:27.463+0000] {taskinstance.py:1509} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=database_postgres
AIRFLOW_CTX_TASK_ID=insert_into_table
AIRFLOW_CTX_EXECUTION_DATE=2023-06-14T13:29:25.521137+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-06-14T13:29:25.521137+00:00
[2023-06-14T13:29:27.464+0000] {sql.py:254} INFO - Executing: INSERT INTO my_table (current_time) VALUES (CURRENT_TIMESTAMP);
[2023-06-14T13:29:27.474+0000] {base.py:73} INFO - Using connection ID 'postgres' for task execution.
[2023-06-14T13:29:27.571+0000] {base.py:73} INFO - Using connection ID 'postgres' for task execution.
[2023-06-14T13:29:27.575+0000] {sql.py:375} INFO - Running statement: INSERT INTO my_table (current_time) VALUES (CURRENT_TIMESTAMP);, parameters: None
[2023-06-14T13:29:27.577+0000] {taskinstance.py:1768} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "current_time"
LINE 1: INSERT INTO my_table (current_time) VALUES (CURRENT_TIMESTAM...
                              ^

[2023-06-14T13:29:27.584+0000] {taskinstance.py:1323} INFO - Marking task as FAILED. dag_id=database_postgres, task_id=insert_into_table, execution_date=20230614T132925, start_date=20230614T132927, end_date=20230614T132927
[2023-06-14T13:29:27.590+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 18 for task insert_into_table (syntax error at or near "current_time"
LINE 1: INSERT INTO my_table (current_time) VALUES (CURRENT_TIMESTAM...
                              ^
; 361)
[2023-06-14T13:29:27.623+0000] {local_task_job.py:208} INFO - Task exited with return code 1
[2023-06-14T13:29:27.640+0000] {taskinstance.py:2578} INFO - 0 downstream tasks scheduled from follow-on schedule check
